trunk/test/fail/ac/ruletypeunknown.app
//Error: rule type unknown: 

application test

access control rules

  rule pag name()
  {
    true
  }
  
  